New aloe vera textures, added multiple water splash particles